compiler/tests/snapshots/parser__ast_from_path@03_var_decl.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/03_var_decl.bakugo
---
  × Parsing error
   ╭─[03_var_decl.bakugo:4:1]
 4 │         c int = 20;
 5 │         i, j, k int = 60, 70;
   ·         ──────────┬─────────
   ·                   ╰── Syntax error: Number of expressions (2) does not match number of identifers (3)
 6 │     );
   ╰────

